src/ISNSParser.cpp

// Generated from ISNS.g4 by ANTLR 4.7


#include "ISNSListener.h"
#include "ISNSVisitor.h"

#include "ISNSParser.h"


using namespace antlrcpp;
using namespace antlr4;

ISNSParser::ISNSParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ISNSParser::~ISNSParser() {
  delete _interpreter;
}

std::string ISNSParser::getGrammarFileName() const {
  return "ISNS.g4";
}

const std::vector<std::string>& ISNSParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ISNSParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ISNSParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISNSParser::ProgramContext::EOF() {
  return getToken(ISNSParser::EOF, 0);
}

std::vector<ISNSParser::ImportlibContext *> ISNSParser::ProgramContext::importlib() {
  return getRuleContexts<ISNSParser::ImportlibContext>();
}

ISNSParser::ImportlibContext* ISNSParser::ProgramContext::importlib(size_t i) {
  return getRuleContext<ISNSParser::ImportlibContext>(i);
}

std::vector<ISNSParser::DeclarationContext *> ISNSParser::ProgramContext::declaration() {
  return getRuleContexts<ISNSParser::DeclarationContext>();
}

ISNSParser::DeclarationContext* ISNSParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<ISNSParser::DeclarationContext>(i);
}


size_t ISNSParser::ProgramContext::getRuleIndex() const {
  return ISNSParser::RuleProgram;
}

void ISNSParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ISNSParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any ISNSParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::ProgramContext* ISNSParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ISNSParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ISNSParser::T__0) {
      setState(70);
      importlib();
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ISNSParser::INTTYPE)
      | (1ULL << ISNSParser::STRTYPE)
      | (1ULL << ISNSParser::BYTETYPE)
      | (1ULL << ISNSParser::VOIDTYPE)
      | (1ULL << ISNSParser::FRACTYPE))) != 0)) {
      setState(76);
      declaration();
      setState(81);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(82);
    match(ISNSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportedlibraryContext ------------------------------------------------------------------

ISNSParser::ImportedlibraryContext::ImportedlibraryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISNSParser::ImportedlibraryContext::EOF() {
  return getToken(ISNSParser::EOF, 0);
}

std::vector<ISNSParser::ImportlibContext *> ISNSParser::ImportedlibraryContext::importlib() {
  return getRuleContexts<ISNSParser::ImportlibContext>();
}

ISNSParser::ImportlibContext* ISNSParser::ImportedlibraryContext::importlib(size_t i) {
  return getRuleContext<ISNSParser::ImportlibContext>(i);
}

std::vector<ISNSParser::DeclarationContext *> ISNSParser::ImportedlibraryContext::declaration() {
  return getRuleContexts<ISNSParser::DeclarationContext>();
}

ISNSParser::DeclarationContext* ISNSParser::ImportedlibraryContext::declaration(size_t i) {
  return getRuleContext<ISNSParser::DeclarationContext>(i);
}


size_t ISNSParser::ImportedlibraryContext::getRuleIndex() const {
  return ISNSParser::RuleImportedlibrary;
}

void ISNSParser::ImportedlibraryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportedlibrary(this);
}

void ISNSParser::ImportedlibraryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportedlibrary(this);
}


antlrcpp::Any ISNSParser::ImportedlibraryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitImportedlibrary(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::ImportedlibraryContext* ISNSParser::importedlibrary() {
  ImportedlibraryContext *_localctx = _tracker.createInstance<ImportedlibraryContext>(_ctx, getState());
  enterRule(_localctx, 2, ISNSParser::RuleImportedlibrary);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ISNSParser::T__0) {
      setState(84);
      importlib();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(93);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ISNSParser::INTTYPE)
      | (1ULL << ISNSParser::STRTYPE)
      | (1ULL << ISNSParser::BYTETYPE)
      | (1ULL << ISNSParser::VOIDTYPE)
      | (1ULL << ISNSParser::FRACTYPE))) != 0)) {
      setState(90);
      declaration();
      setState(95);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(96);
    match(ISNSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportlibContext ------------------------------------------------------------------

ISNSParser::ImportlibContext::ImportlibContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ISNSParser::PathContext *> ISNSParser::ImportlibContext::path() {
  return getRuleContexts<ISNSParser::PathContext>();
}

ISNSParser::PathContext* ISNSParser::ImportlibContext::path(size_t i) {
  return getRuleContext<ISNSParser::PathContext>(i);
}


size_t ISNSParser::ImportlibContext::getRuleIndex() const {
  return ISNSParser::RuleImportlib;
}

void ISNSParser::ImportlibContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportlib(this);
}

void ISNSParser::ImportlibContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportlib(this);
}


antlrcpp::Any ISNSParser::ImportlibContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitImportlib(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::ImportlibContext* ISNSParser::importlib() {
  ImportlibContext *_localctx = _tracker.createInstance<ImportlibContext>(_ctx, getState());
  enterRule(_localctx, 4, ISNSParser::RuleImportlib);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(ISNSParser::T__0);
    setState(99);
    path();
    setState(104);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ISNSParser::T__1) {
      setState(100);
      match(ISNSParser::T__1);
      setState(101);
      path();
      setState(106);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(107);
    match(ISNSParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PathContext ------------------------------------------------------------------

ISNSParser::PathContext::PathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISNSParser::StringContext* ISNSParser::PathContext::string() {
  return getRuleContext<ISNSParser::StringContext>(0);
}


size_t ISNSParser::PathContext::getRuleIndex() const {
  return ISNSParser::RulePath;
}

void ISNSParser::PathContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPath(this);
}

void ISNSParser::PathContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPath(this);
}


antlrcpp::Any ISNSParser::PathContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitPath(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::PathContext* ISNSParser::path() {
  PathContext *_localctx = _tracker.createInstance<PathContext>(_ctx, getState());
  enterRule(_localctx, 6, ISNSParser::RulePath);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

ISNSParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISNSParser::VardeclarationContext* ISNSParser::DeclarationContext::vardeclaration() {
  return getRuleContext<ISNSParser::VardeclarationContext>(0);
}

ISNSParser::FunctiondeclarationContext* ISNSParser::DeclarationContext::functiondeclaration() {
  return getRuleContext<ISNSParser::FunctiondeclarationContext>(0);
}


size_t ISNSParser::DeclarationContext::getRuleIndex() const {
  return ISNSParser::RuleDeclaration;
}

void ISNSParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void ISNSParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


antlrcpp::Any ISNSParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::DeclarationContext* ISNSParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, ISNSParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(111);
      vardeclaration();
      setState(112);
      match(ISNSParser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(114);
      functiondeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VardeclarationContext ------------------------------------------------------------------

ISNSParser::VardeclarationContext::VardeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISNSParser::VartypeContext* ISNSParser::VardeclarationContext::vartype() {
  return getRuleContext<ISNSParser::VartypeContext>(0);
}

std::vector<ISNSParser::IdentifierContext *> ISNSParser::VardeclarationContext::identifier() {
  return getRuleContexts<ISNSParser::IdentifierContext>();
}

ISNSParser::IdentifierContext* ISNSParser::VardeclarationContext::identifier(size_t i) {
  return getRuleContext<ISNSParser::IdentifierContext>(i);
}

std::vector<ISNSParser::AssignmentContext *> ISNSParser::VardeclarationContext::assignment() {
  return getRuleContexts<ISNSParser::AssignmentContext>();
}

ISNSParser::AssignmentContext* ISNSParser::VardeclarationContext::assignment(size_t i) {
  return getRuleContext<ISNSParser::AssignmentContext>(i);
}


size_t ISNSParser::VardeclarationContext::getRuleIndex() const {
  return ISNSParser::RuleVardeclaration;
}

void ISNSParser::VardeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVardeclaration(this);
}

void ISNSParser::VardeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVardeclaration(this);
}


antlrcpp::Any ISNSParser::VardeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitVardeclaration(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::VardeclarationContext* ISNSParser::vardeclaration() {
  VardeclarationContext *_localctx = _tracker.createInstance<VardeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, ISNSParser::RuleVardeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(117);
    vartype();
    setState(120);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(118);
      identifier();
      break;
    }

    case 2: {
      setState(119);
      assignment();
      break;
    }

    }
    setState(129);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(122);
        match(ISNSParser::T__1);
        setState(125);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
        case 1: {
          setState(123);
          identifier();
          break;
        }

        case 2: {
          setState(124);
          assignment();
          break;
        }

        } 
      }
      setState(131);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VartypeContext ------------------------------------------------------------------

ISNSParser::VartypeContext::VartypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISNSParser::VartypeContext::INTTYPE() {
  return getToken(ISNSParser::INTTYPE, 0);
}

tree::TerminalNode* ISNSParser::VartypeContext::STRTYPE() {
  return getToken(ISNSParser::STRTYPE, 0);
}

tree::TerminalNode* ISNSParser::VartypeContext::BYTETYPE() {
  return getToken(ISNSParser::BYTETYPE, 0);
}

tree::TerminalNode* ISNSParser::VartypeContext::FRACTYPE() {
  return getToken(ISNSParser::FRACTYPE, 0);
}


size_t ISNSParser::VartypeContext::getRuleIndex() const {
  return ISNSParser::RuleVartype;
}

void ISNSParser::VartypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVartype(this);
}

void ISNSParser::VartypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVartype(this);
}


antlrcpp::Any ISNSParser::VartypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitVartype(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::VartypeContext* ISNSParser::vartype() {
  VartypeContext *_localctx = _tracker.createInstance<VartypeContext>(_ctx, getState());
  enterRule(_localctx, 12, ISNSParser::RuleVartype);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ISNSParser::INTTYPE)
      | (1ULL << ISNSParser::STRTYPE)
      | (1ULL << ISNSParser::BYTETYPE)
      | (1ULL << ISNSParser::FRACTYPE))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctiondeclarationContext ------------------------------------------------------------------

ISNSParser::FunctiondeclarationContext::FunctiondeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ISNSParser::FunctiontypeContext* ISNSParser::FunctiondeclarationContext::functiontype() {
  return getRuleContext<ISNSParser::FunctiontypeContext>(0);
}

ISNSParser::IdentifierContext* ISNSParser::FunctiondeclarationContext::identifier() {
  return getRuleContext<ISNSParser::IdentifierContext>(0);
}

ISNSParser::BlockContext* ISNSParser::FunctiondeclarationContext::block() {
  return getRuleContext<ISNSParser::BlockContext>(0);
}

ISNSParser::ArgsContext* ISNSParser::FunctiondeclarationContext::args() {
  return getRuleContext<ISNSParser::ArgsContext>(0);
}


size_t ISNSParser::FunctiondeclarationContext::getRuleIndex() const {
  return ISNSParser::RuleFunctiondeclaration;
}

void ISNSParser::FunctiondeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctiondeclaration(this);
}

void ISNSParser::FunctiondeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctiondeclaration(this);
}


antlrcpp::Any ISNSParser::FunctiondeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitFunctiondeclaration(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::FunctiondeclarationContext* ISNSParser::functiondeclaration() {
  FunctiondeclarationContext *_localctx = _tracker.createInstance<FunctiondeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, ISNSParser::RuleFunctiondeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    functiontype();
    setState(135);
    identifier();
    setState(136);
    match(ISNSParser::T__3);
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ISNSParser::INTTYPE)
      | (1ULL << ISNSParser::STRTYPE)
      | (1ULL << ISNSParser::BYTETYPE)
      | (1ULL << ISNSParser::FRACTYPE))) != 0)) {
      setState(137);
      args();
    }
    setState(140);
    match(ISNSParser::T__4);
    setState(141);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctiontypeContext ------------------------------------------------------------------

ISNSParser::FunctiontypeContext::FunctiontypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ISNSParser::FunctiontypeContext::INTTYPE() {
  return getToken(ISNSParser::INTTYPE, 0);
}

tree::TerminalNode* ISNSParser::FunctiontypeContext::STRTYPE() {
  return getToken(ISNSParser::STRTYPE, 0);
}

tree::TerminalNode* ISNSParser::FunctiontypeContext::BYTETYPE() {
  return getToken(ISNSParser::BYTETYPE, 0);
}

tree::TerminalNode* ISNSParser::FunctiontypeContext::FRACTYPE() {
  return getToken(ISNSParser::FRACTYPE, 0);
}

tree::TerminalNode* ISNSParser::FunctiontypeContext::VOIDTYPE() {
  return getToken(ISNSParser::VOIDTYPE, 0);
}


size_t ISNSParser::FunctiontypeContext::getRuleIndex() const {
  return ISNSParser::RuleFunctiontype;
}

void ISNSParser::FunctiontypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctiontype(this);
}

void ISNSParser::FunctiontypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctiontype(this);
}


antlrcpp::Any ISNSParser::FunctiontypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitFunctiontype(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::FunctiontypeContext* ISNSParser::functiontype() {
  FunctiontypeContext *_localctx = _tracker.createInstance<FunctiontypeContext>(_ctx, getState());
  enterRule(_localctx, 16, ISNSParser::RuleFunctiontype);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ISNSParser::INTTYPE)
      | (1ULL << ISNSParser::STRTYPE)
      | (1ULL << ISNSParser::BYTETYPE)
      | (1ULL << ISNSParser::VOIDTYPE)
      | (1ULL << ISNSParser::FRACTYPE))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgsContext ------------------------------------------------------------------

ISNSParser::ArgsContext::ArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ISNSParser::VardeclarationContext *> ISNSParser::ArgsContext::vardeclaration() {
  return getRuleContexts<ISNSParser::VardeclarationContext>();
}

ISNSParser::VardeclarationContext* ISNSParser::ArgsContext::vardeclaration(size_t i) {
  return getRuleContext<ISNSParser::VardeclarationContext>(i);
}


size_t ISNSParser::ArgsContext::getRuleIndex() const {
  return ISNSParser::RuleArgs;
}

void ISNSParser::ArgsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArgs(this);
}

void ISNSParser::ArgsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArgs(this);
}


antlrcpp::Any ISNSParser::ArgsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitArgs(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::ArgsContext* ISNSParser::args() {
  ArgsContext *_localctx = _tracker.createInstance<ArgsContext>(_ctx, getState());
  enterRule(_localctx, 18, ISNSParser::RuleArgs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    vardeclaration();
    setState(150);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ISNSParser::T__1) {
      setState(146);
      match(ISNSParser::T__1);
      setState(147);
      vardeclaration();
      setState(152);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ISNSParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ISNSParser::StatementContext *> ISNSParser::BlockContext::statement() {
  return getRuleContexts<ISNSParser::StatementContext>();
}

ISNSParser::StatementContext* ISNSParser::BlockContext::statement(size_t i) {
  return getRuleContext<ISNSParser::StatementContext>(i);
}


size_t ISNSParser::BlockContext::getRuleIndex() const {
  return ISNSParser::RuleBlock;
}

void ISNSParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void ISNSParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ISNSListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any ISNSParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ISNSVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ISNSParser::BlockContext* ISNSParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 20, ISNSParser::RuleBlock);
  size_t _la = 0;
